# FigureDrawer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/BarComponent/: CMakeLists.txt
src/Core/FooComponent/: CMakeLists.txt
src/Core/FooComponent/include/: Foo.hpp
src/Core/FooComponent/src/: Foo.cpp
src/Core/GeometryComponent/: CMakeLists.txt
src/Core/GeometryComponent/include/: Figure.hpp
src/Core/GeometryComponent/src/: Figure.cpp
src/Gui/: CMakeLists.txt
src/Gui/include/: DrawField.hpp  FigureDrawer.hpp  mainwindow.hpp
src/Gui/src/: DrawField.cpp  FigureDrawer.cpp  main.cpp  mainwindow.cpp
src/Gui/ui/: mainwindow.ui
